terraform/gcp-artic-lab/k8s/kuard-istio.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kuard-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: kuard-http
      protocol: HTTP
    hosts:
    - "kuard.gke-istio.arctic-lab.mattandes.com"
    tls:
      httpsRedirect: false
  - hosts:
    - "kuard.gke-istio.arctic-lab.mattandes.com"
    port:
      name: kuard-https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kuard
spec:
  hosts:
  - "kuard.gke-istio.arctic-lab.mattandes.com"
  gateways:
  - kuard-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: kuard
