terraform/gcp-artic-lab/k8s/kuard.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/clusterissuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: clouddns
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/whitelist-source-range: 10.128.0.0/16
spec:
  tls:
  - hosts:
      - kuard.arctic-lab.mattandes.com
    secretName: kuard-tls-cert
  rules:
  - host: kuard.arctic-lab.mattandes.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
